fixed hub search alignment

--- a/src/app/modules/hub/hub.component.scss
+++ b/src/app/modules/hub/hub.component.scss
@@ -235,9 +235,7 @@
 
   .align-searchbox {
     margin-top: 25px;
-    // width: 39.75em;
     width: 23.813em !important;
-    margin-left: 910px;
   }
 
   .new-search-icon {
